# ollama-rag-template

./: .gitignore  README.md  main.py  pyproject.toml
config/: application.conf
notebooks/: 01_dockerized_ollama.ipynb  02_local_ollama.ipynb
src/: config.py
src/environment/: environment.py  ollama.py
tests/: conftest.py  test_conftest_healthcheck.py
