[project]
name = "dockerized-ollama-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.0",
    "pip>=25.1.1",
    "pytest>=8.4.1",
    "testcontainers>=4.12.0",
    "requests>=2.31.0",
    "pyhocon>=0.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
